--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,7 +11,7 @@
 # │  http://build.fhir.org/ig/HL7/fhir-shorthand/branches/beta/sushi.html#ig-development           │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: kiola-implementation-guide
-canonical: http://fhir.ehealth-systems.at/artifacts
+canonical: https://fhir.ehealth-systems.at/artifacts
 version: 0.1.0
 name: KIOLAImplementationGuide
 title: KIOLA Implementation Guide
