--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ before_script:
   - apk add --no-cache fontconfig ttf-dejavu
   # Version checks
   - echo "Version check:"
+  - node --version
   - npm --version
   - java -version
   # FHIR
@@ -26,6 +27,9 @@ before_script:
   - echo "TEST:"
   - ls -la .
   - ls -la ./input-cache
+  - echo $PATH
+  - export PATH=/home/ubuntu/.nvm/versions/node/v10.16.3/bin/:$PATH
+  - echo $PATH
 
 stages:
   - build
