Working on CI configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,12 +34,6 @@ build:
   stage: build
   script:
     - java -jar input-cache/publisher.jar -ig ig.ini
-    # TEST
-    - echo "TEST:"
-    - ls -la .
-    - ls -la ./input-cache
-    - ls -la ./output
-    - ls -la ./fsh-generated
   cache:
     paths:
       - ./input-cache
@@ -49,18 +43,17 @@ build:
       - ./output
       - ./fsh-generated
 
-#pages:
-#  stage: deploy
-#  interruptible: true
+pages:
+  stage: deploy
+  interruptible: true
 #  rules:
 #    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-#  cache:
-#    paths:
-#      - ./input-cache
-#      - ./output
-#    policy: pull
-#  script:
-#    - mv ./output ./public
-#  artifacts:
-#    paths:
-#      - public
+  script:
+    - mv ./output ./public
+  cache:
+    paths:
+      - ./output
+    policy: pull
+  artifacts:
+    paths:
+      - public
