Replace logo and base template

--- a/ig.ini
+++ b/ig.ini
@@ -1,4 +1,3 @@
 [IG]
-template = fhir.base.template
-#template = at.fhir.ig.template#current
+template=https://github.com/HL7Austria/at-fhir-ig-template
 ig = fsh-generated/resources/ImplementationGuide-kiola-implementation-guide.json
