--- a/input/landing_page/_index.yml
+++ b/input/landing_page/_index.yml
@@ -1,5 +1,5 @@
 # You only need this for the Hl7 Austria landing page, irrelevant otherwise
-- name: HL7AT-R4
+- name: AIT-KIOLA-R4
 - version: 0.1.0-STU1
 - description: FHIR&reg; R4 Implementation Guide for the HL7 ATApp Integration.
 - last_published: %%date%%
